build/log/idf_py_stdout_output_189189
Command: ninja app
[1/6] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/payload.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/payload.c.obj 
/home/jonathan/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-3863-g338f341110\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/jonathan/esp/payload/build/config -I/home/jonathan/esp/payload/main -I/home/jonathan/esp/esp-idf/components/esp_libc/platform_include -I/home/jonathan/esp/esp-idf/components/freertos/config/include -I/home/jonathan/esp/esp-idf/components/freertos/config/include/freertos -I/home/jonathan/esp/esp-idf/components/freertos/config/xtensa/include -I/home/jonathan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jonathan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jonathan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/jonathan/esp/esp-idf/components/freertos/esp_additions/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/jonathan/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/etm/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/modem/include -I/home/jonathan/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/jonathan/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/jonathan/esp/esp-idf/components/heap/include -I/home/jonathan/esp/esp-idf/components/heap/tlsf -I/home/jonathan/esp/esp-idf/components/log/include -I/home/jonathan/esp/esp-idf/components/soc/include -I/home/jonathan/esp/esp-idf/components/soc/esp32 -I/home/jonathan/esp/esp-idf/components/soc/esp32/include -I/home/jonathan/esp/esp-idf/components/soc/esp32/register -I/home/jonathan/esp/esp-idf/components/hal/platform_port/include -I/home/jonathan/esp/esp-idf/components/hal/esp32/include -I/home/jonathan/esp/esp-idf/components/hal/include -I/home/jonathan/esp/esp-idf/components/esp_rom/include -I/home/jonathan/esp/esp-idf/components/esp_rom/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/jonathan/esp/esp-idf/components/esp_rom/esp32 -I/home/jonathan/esp/esp-idf/components/esp_common/include -I/home/jonathan/esp/esp-idf/components/esp_system/include -I/home/jonathan/esp/esp-idf/components/esp_system/port/soc -I/home/jonathan/esp/esp-idf/components/esp_system/port/include/private -I/home/jonathan/esp/esp-idf/components/esp_stdio/include -I/home/jonathan/esp/esp-idf/components/xtensa/esp32/include -I/home/jonathan/esp/esp-idf/components/xtensa/include -I/home/jonathan/esp/esp-idf/components/xtensa/deprecated_include -I/home/jonathan/esp/esp-idf/components/esp_hal_gpio/include -I/home/jonathan/esp/esp-idf/components/esp_hal_gpio/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_hal_usb/include -I/home/jonathan/esp/esp-idf/components/esp_hal_pmu/include -I/home/jonathan/esp/esp-idf/components/esp_hal_pmu/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_hal_regi2c/include -I/home/jonathan/esp/esp-idf/components/esp_hal_regi2c/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_hal_ana_conv/include -I/home/jonathan/esp/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_hal_dma/include -I/home/jonathan/esp/esp-idf/components/esp_hal_i2s/include -I/home/jonathan/esp/esp-idf/components/esp_hal_i2s/esp32/include -I/home/jonathan/esp/esp-idf/components/lwip/include -I/home/jonathan/esp/esp-idf/components/lwip/include/apps -I/home/jonathan/esp/esp-idf/components/lwip/lwip/src/include -I/home/jonathan/esp/esp-idf/components/lwip/port/include -I/home/jonathan/esp/esp-idf/components/lwip/port/freertos/include -I/home/jonathan/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/jonathan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/jonathan/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/jonathan/esp/esp-idf/components/fatfs/diskio -I/home/jonathan/esp/esp-idf/components/fatfs/src -I/home/jonathan/esp/esp-idf/components/fatfs/vfs -I/home/jonathan/esp/esp-idf/components/wear_levelling/include -I/home/jonathan/esp/esp-idf/components/esp_partition/include -I/home/jonathan/esp/esp-idf/components/esp_blockdev/include -I/home/jonathan/esp/esp-idf/components/sdmmc/include -I/home/jonathan/esp/esp-idf/components/esp_hal_sd/include -I/home/jonathan/esp/esp-idf/components/esp_hal_sd/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/jonathan/esp/esp-idf/components/esp_driver_sdmmc/legacy/include -I/home/jonathan/esp/esp-idf/components/esp_driver_sd_intf/include -I/home/jonathan/esp/esp-idf/components/esp_driver_sdspi/include -I/home/jonathan/esp/esp-idf/components/esp_driver_spi/include -I/home/jonathan/esp/esp-idf/components/esp_pm/include -I/home/jonathan/esp/esp-idf/components/esp_hal_gpspi/include -I/home/jonathan/esp/esp-idf/components/esp_hal_gpspi/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_driver_dma/include -I/home/jonathan/esp/esp-idf/components/esp_driver_gpio/include -I/home/jonathan/esp/esp-idf/components/esp_adc/include -I/home/jonathan/esp/esp-idf/components/esp_adc/interface -I/home/jonathan/esp/esp-idf/components/esp_adc/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_driver_i2c/include -I/home/jonathan/esp/esp-idf/components/esp_hal_i2c/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_hal_i2c/include -I/home/jonathan/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/jonathan/esp/esp-idf/components/esp_hal_mcpwm/include -I/home/jonathan/esp/esp-idf/components/esp_hal_mcpwm/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_driver_uart/include -I/home/jonathan/esp/esp-idf/components/esp_hal_uart/include -I/home/jonathan/esp/esp-idf/components/esp_hal_uart/esp32/include -I/home/jonathan/esp/esp-idf/components/vfs/include -I/home/jonathan/esp/esp-idf/components/esp_driver_ledc/include -I/home/jonathan/esp/esp-idf/components/esp_hal_ledc/include -I/home/jonathan/esp/esp-idf/components/esp_hal_ledc/esp32/include -I/home/jonathan/esp/esp-idf/components/esp_timer/include @"/home/jonathan/esp/payload/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/jonathan/esp/payload=. -fmacro-prefix-map=/home/jonathan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/payload.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/payload.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/payload.c.obj -c /home/jonathan/esp/payload/main/payload.c
/home/jonathan/esp/payload/main/payload.c:100:18: error: 'imu_read' used but never defined [-Werror]
  100 | static esp_err_t imu_read(uint8_t *buf, size_t buf_len, size_t *out_len,
      |                  ^~~~~~~~
/home/jonathan/esp/payload/main/payload.c:347:13: warning: 'stepper_step' defined but not used [-Wunused-function]
  347 | static void stepper_step(gpio_num_t pin_step, gpio_num_t pin_dir, bool dir,
      |             ^~~~~~~~~~~~
/home/jonathan/esp/payload/main/payload.c:243:18: warning: 'bno085_read_packet' defined but not used [-Wunused-function]
  243 | static esp_err_t bno085_read_packet(uint8_t *buf, size_t buf_len,
      |                  ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
ninja: build stopped: subcommand failed.
